--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,111 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title>贵州文化和旅游金融服务中心</title>
+  <style>
+    .index-spin {
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #000;
+    }
+    .index-m-spin {
+      display: inline-block;
+      text-align: center;
+    }
+    .index-u-tip {
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 20px;
+      color: #1890FF;
+      width: 100%;
+      text-align: center;
+      padding-top: 16px;
+      text-shadow: 0 1px 2px #FFF;
+    }
+    .index-m-spin-dot {
+      position: relative;
+      display: inline-block;
+      width: 36px;
+      height: 36px;
+      transform: rotate(45deg);
+      -ms-transform: rotate(45deg); /* Internet Explorer */
+      -moz-transform: rotate(45deg); /* Firefox */
+      -webkit-transform: rotate(45deg); /* Safari 和 Chrome */
+      -o-transform: rotate(45deg); /* Opera */
+      animation: rotate 1.2s linear infinite;
+      -webkit-animation: rotate 1.2s linear infinite;
+    }
+    @keyframes rotate {
+      100% {transform: rotate(405deg);}
+    }
+    .index-u-dot-item {
+      position: absolute;
+      width: 12px;
+      height: 12px;
+      background: #1890FF;
+      border-radius: 50%;
+      opacity: .3;
+      animation: spinMove 1s linear infinite alternate;
+      -webkit-animation: spinMove 1s linear infinite alternate;
+      @keyframes spinMove {
+        100% {opacity: 1;}
+      }
+    }
+    .index-u-dot-item:first-child {
+      top: 0;
+      left: 0;
+    }
+    .index-u-dot-item:nth-child(2) {
+      top: 0;
+      right: 0;
+      animation-delay: .4s;
+      -webkit-animation-delay: .4s;
+    }
+    .index-u-dot-item:nth-child(3) {
+      bottom: 0;
+      right: 0;
+      animation-delay: .8s;
+      -webkit-animation-delay: .8s;
+    }
+    .index-u-dot-item:last-child {
+      bottom: 0;
+      left: 0;
+      animation-delay: 1.2s;
+      -webkit-animation-delay: 1.2s;
+    }
+  </style>
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+  </noscript>
+  <div id="app">
+    <div class="index-spin">
+      <div class="index-m-spin">
+        <div class="index-m-spin-dot">
+          <span class="index-u-dot-item"></span>
+          <span class="index-u-dot-item"></span>
+          <span class="index-u-dot-item"></span>
+          <span class="index-u-dot-item"></span>
+        </div>
+        <p class="index-u-tip">加载中...</p>
+      </div>
+    </div>
+  </div>
+  <!-- require cdn assets js -->
+  <% for (var i in htmlWebpackPlugin.options.cdn && htmlWebpackPlugin.options.cdn.js) { %>
+    <script type="text/javascript" src="<%= htmlWebpackPlugin.options.cdn.js[i] %>"></script>
+    <% } %>
+      <!-- built files will be auto injected -->
+</body>
+
 </html>
