--- a/public/index.html
+++ b/public/index.html
@@ -4,32 +4,29 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>贵州文化和旅游金融服务中心</title>
   <style>
-    .index-spin {
+    :root {
+      --themeColor: #1890FF;
+    }
+    .m-spin-wrap {
       height: 100vh;
+    }
+    .m-spin {
+      width: 100%;
+      height: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
-      background: #000;
+      position: relative;
+      z-index: 9;
     }
-    .index-m-spin {
-      display: inline-block;
+    .m-spin-box {
       text-align: center;
     }
-    .index-u-tip {
-      font-size: 16px;
-      font-weight: 500;
-      line-height: 20px;
-      color: #1890FF;
-      width: 100%;
-      text-align: center;
-      padding-top: 16px;
-      text-shadow: 0 1px 2px #FFF;
-    }
-    .index-m-spin-dot {
+    .m-spin-dot {
       position: relative;
       display: inline-block;
       width: 36px;
@@ -45,11 +42,11 @@
     @keyframes rotate {
       100% {transform: rotate(405deg);}
     }
-    .index-u-dot-item {
+    .u-dot-item {
       position: absolute;
       width: 12px;
       height: 12px;
-      background: #1890FF;
+      background: var(--themeColor);
       border-radius: 50%;
       opacity: .3;
       animation: spinMove 1s linear infinite alternate;
@@ -58,27 +55,35 @@
         100% {opacity: 1;}
       }
     }
-    .index-u-dot-item:first-child {
+    .u-dot-item:first-child {
       top: 0;
       left: 0;
     }
-    .index-u-dot-item:nth-child(2) {
+    .u-dot-item:nth-child(2) {
       top: 0;
       right: 0;
       animation-delay: .4s;
       -webkit-animation-delay: .4s;
     }
-    .index-u-dot-item:nth-child(3) {
+    .u-dot-item:nth-child(3) {
       bottom: 0;
       right: 0;
       animation-delay: .8s;
       -webkit-animation-delay: .8s;
     }
-    .index-u-dot-item:last-child {
+    .u-dot-item:last-child {
       bottom: 0;
       left: 0;
       animation-delay: 1.2s;
       -webkit-animation-delay: 1.2s;
+    }
+    .u-tip {
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 20px;
+      color: var(--themeColor);
+      text-align: center;
+      padding-top: 10px;
     }
   </style>
 </head>
@@ -89,15 +94,17 @@
         Please enable it to continue.</strong>
   </noscript>
   <div id="app">
-    <div class="index-spin">
-      <div class="index-m-spin">
-        <div class="index-m-spin-dot">
-          <span class="index-u-dot-item"></span>
-          <span class="index-u-dot-item"></span>
-          <span class="index-u-dot-item"></span>
-          <span class="index-u-dot-item"></span>
+    <div class="m-spin-wrap">
+      <div class="m-spin" v-show="spinning">
+        <div class="m-spin-box">
+          <div class="m-spin-dot">
+            <span class="u-dot-item"></span>
+            <span class="u-dot-item"></span>
+            <span class="u-dot-item"></span>
+            <span class="u-dot-item"></span>
+          </div>
+          <p class="u-tip">加载中...</p>
         </div>
-        <p class="index-u-tip">加载中...</p>
       </div>
     </div>
   </div>
