--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="">
-
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>贵州文化和旅游金融服务中心</title>
+  <title>test vue project</title>
   <style>
     :root {
       --themeColor: #1890FF;
     }
-    .m-spin-wrap {
+    .index-m-spin-wrap {
       height: 100vh;
     }
-    .m-spin {
+    .index-m-spin {
       width: 100%;
       height: 100%;
       display: flex;
@@ -23,10 +22,10 @@
       position: relative;
       z-index: 9;
     }
-    .m-spin-box {
+    .index-m-spin-box {
       text-align: center;
     }
-    .m-spin-dot {
+    .index-m-spin-dot {
       position: relative;
       display: inline-block;
       width: 36px;
@@ -42,7 +41,7 @@
     @keyframes rotate {
       100% {transform: rotate(405deg);}
     }
-    .u-dot-item {
+    .index-u-dot-item {
       position: absolute;
       width: 12px;
       height: 12px;
@@ -51,33 +50,33 @@
       opacity: .3;
       animation: spinMove 1s linear infinite alternate;
       -webkit-animation: spinMove 1s linear infinite alternate;
-      @keyframes spinMove {
-        100% {opacity: 1;}
-      }
     }
-    .u-dot-item:first-child {
+    @keyframes spinMove {
+      100% {opacity: 1;}
+    }
+    .index-u-dot-item:first-child {
       top: 0;
       left: 0;
     }
-    .u-dot-item:nth-child(2) {
+    .index-u-dot-item:nth-child(2) {
       top: 0;
       right: 0;
       animation-delay: .4s;
       -webkit-animation-delay: .4s;
     }
-    .u-dot-item:nth-child(3) {
+    .index-u-dot-item:nth-child(3) {
       bottom: 0;
       right: 0;
       animation-delay: .8s;
       -webkit-animation-delay: .8s;
     }
-    .u-dot-item:last-child {
+    .index-u-dot-item:last-child {
       bottom: 0;
       left: 0;
       animation-delay: 1.2s;
       -webkit-animation-delay: 1.2s;
     }
-    .u-tip {
+    .index-u-tip {
       font-size: 16px;
       font-weight: 500;
       line-height: 20px;
@@ -94,16 +93,16 @@
         Please enable it to continue.</strong>
   </noscript>
   <div id="app">
-    <div class="m-spin-wrap">
-      <div class="m-spin" v-show="spinning">
-        <div class="m-spin-box">
-          <div class="m-spin-dot">
-            <span class="u-dot-item"></span>
-            <span class="u-dot-item"></span>
-            <span class="u-dot-item"></span>
-            <span class="u-dot-item"></span>
+    <div class="index-m-spin-wrap">
+      <div class="index-m-spin">
+        <div class="index-m-spin-box">
+          <div class="index-m-spin-dot">
+            <span class="index-u-dot-item"></span>
+            <span class="index-u-dot-item"></span>
+            <span class="index-u-dot-item"></span>
+            <span class="index-u-dot-item"></span>
           </div>
-          <p class="u-tip">加载中...</p>
+          <p class="index-u-tip">加载中...</p>
         </div>
       </div>
     </div>
